[#4] Correct Travis CI configuration
Use tox-travis plugin for running tox environments as pyenv does not
work with plain tox.

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,13 @@ commands = {posargs:py.test \
 addopts = --pep8 --cov-report xml
 norecursedirs = bin lib include
 
+[travis]
+python =
+  2.7: py27
+  3.6: py36
+  3.7: py37, pylint, docs
+
+
 [testenv:pylint]
 basepython = python3.7
 deps =
